# Aetheris

./: README.md
aetheris/: Cargo.toml  install.sh  result.json
aetheris/src/: main.rs
